refactor: move public apis to tachyon-api